2004-09-14 Alain Magloire

	Define for the contentType extensions for
	type of files.  Note this is incomplete
	We have to wait for 3.1 when the ContentTypeManger
	to be fully functionnal.

	* plugin.xml

2004-09-10 Alain Magloire

	Remove annoying warnings and prevent the PathEntryManger
	from firing on working Copies.

	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-09-07 Alain Magloire

	Part of the uncoming work to supply formatting in CDT
	* schema/CodeFormatter.exsd
	* src/org/eclipse/cdt/core/CodePreferenceConstants.java
	* src/org/eclipse/cdt/core/ToolFactory.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatter.java
	* src/org/eclipse/cdt/core/formatter/CodeFormatterConstants.java
	* src/org/eclipse/cdt/internal/core/CCorePreferenceInitializer.java
	* plugin.properties
	* plugin.xml

2004-09-03 Alain Magloire

	Provide the extension for the Core Plugin Preference Initializer.
	* plugin.xml

2004-09-03 Alain Magloire

	Add the BinaryModule to the info.
	* model/org/eclipse/cdt/internal/core/model/BinaryModule.java

2004-09-03 Alain Magloire

	Patch from Patrick Duboy. 72901
	* plugin.xml

2004-09-02 Alain Magloire

	Fix to TranslationUnit.getElement(String).
	* model/org/eclipse/cdt/internal/core/model/TranslationUnit.java
	* model/org/eclipse/cdt/internal/core/model/WorkingCopy.java

2004-09-01 Alain Magloire

	Provide IWorkingCopy.getOriginal(ICElement)
	* model/org/eclipse/cdt/core/model/IWorkingCopy.java
	* model/org/eclipse/cdt/internal/core/model/WorkinCopy.java

2004-08-31 Alain Magloire

	Fix for 72198
	* model/org/eclipse/cdt/internal/core/ExternalTranslationUnit.java
	* model/org/eclipse/cdt/internal/core/TranslationUnit.java

2004-08-27 Alain Magloire

	Fix for 72550.
	* plugin.xml

2004-08-25 Chris Wiebe

	support for matching enclosed type names
	* browser/org/eclipse/cdt/browser/AllTypesCache.java
	* browser/org/eclipse/cdt/browser/IQualifiedTypeName.java
	* browser/org/eclipse/cdt/browser/QualifiedTypeName.java